--- a/style.css
+++ b/style.css
@@ -4,8 +4,14 @@ body{
     background-repeat: no-repeat;
     min-height: 812px;
     width: 375px;
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 .chart_style{
-  margin-top: 20px;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
